@@ -50,6 +50,14 @@ one mapper.</p>
     <td align="center" valign="top">No</td>
   </tr>
   <tr>
+    <td valign="top">relative</td>
+    <td valign="top">whether the filenames should be passed on the
+      command line as absolute or relative pathnames (relative to the
+      base directory of the corresponding fileset for source files or
+      the dest attribute for target files).</td>
+    <td align="center" valign="top">No, default is <i>false</i></td>
+  </tr>
+  <tr>
     <td valign="top">os</td>
     <td valign="top">list of Operating Systems on which the command may be
       executed.</td>
